--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         </div>
     </section>
 
-    <section class="section">
-        <div class="container d-flex flex-row flex-wrap flex-sm-nowrap">
+    <section class="section relative">
+        <div class="bg-cyan-half"></div>
+        <div class="container text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
             <div class="d-flex flex-1 flex-column text-center p-5">
                 <h2 class="mb-5 bold">WHO WE ARE</h2>
                 <h5><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities. Hayman looks to make a positive impact to society wherever it invests. </h5>
@@ -107,7 +108,7 @@
                     <p class="small">sultan.marenov@hayman-capital.com</p>
                 </div>
                 <div class="d-flex flex-column pl-sm-5">
-                    <h5 class="bold">SULTAN MARENOV</h5>
+                    <h5 class="bold mb-1">SULTAN MARENOV</h5>
                     <p class="text-blue text-underline pb-2 max-content mb-5"> CEO & Managing Director</p>
                     <p>20 years of senior experience in Commercial Banking, focusing on Trade Finance, SME and Microfinance lending, Retail Banking and general operational management. Sultan began his career in 1999 at the BTA Bank - the biggest private financial institution in Central Asia and CIS countries. In 2005, he was appointed as a CEO at the BTA Bank Belarus. During his 10 years of management, the bank became the fastest growing in the region and awarded as the "Best Bank for entrepreneurs" several times. He has successfully implemented the EBRD Microfinance Program in the Bank. He holds Bachelor degree in Banking and Finance and Bachelor degree in Jurisprudence.</p>
                 </div>
@@ -119,7 +120,7 @@
                     <p class="small">david.walker@hayman-capital.com</p>
                 </div>
                 <div class="d-flex flex-column pl-sm-5">
-                    <h5 class="bold">DAVID WALKER</h5>
+                    <h5 class="bold mb-1">DAVID WALKER</h5>
                     <p class="text-blue text-underline pb-2 max-content mb-5"> Director </p>
                     <p>25 years of senior experience in Investment Banking and project development, focusing on Natural Resources, Real Estate and the Financial sector within fast-growing developing markets. David has been based in Russia for 6 years and Africa for 5 years. Previously David was a Managing Director at Citi Group, Deutsche Bank and Troika Dialogue in Moscow. David also has extensive experience in the Far East gained when he was a Director of Nomura International. MA in Jurisprudence from Oxford University.</p>
                 </div>
@@ -127,10 +128,11 @@
         </div>
     </section>
 
-    <section class="section">
+    <section class="section relative">
+        <div class="bg-cyan-half"></div>
         <div class="container d-flex flex-row flex-wrap flex-sm-nowrap">
             <div class="d-flex flex-1 flex-column text-center p-5">
-                <h2 class="mb-5 bold pl-5">Prospective Investors & Stakeholders</h2>
+                <h2 class="mb-5 bold pl-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
             <div class="d-flex flex-1 flex-column p-5">
                 <h2 class="bold">OUR ADDRESS</h2>
