--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </section>
 
     <section class="section relative">
-        <div class="bg-cyan-half"></div>
+        <div class="bg-half bg-cyan"></div>
         <div class="container text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
             <div class="d-flex flex-1 flex-column text-center p-5">
                 <h2 class="mb-5 bold">WHO WE ARE</h2>
@@ -132,7 +132,7 @@
         <div class="bg-cyan-half"></div>
         <div class="container d-flex flex-row flex-wrap flex-sm-nowrap">
             <div class="d-flex flex-1 flex-column text-center p-5">
-                <h2 class="mb-5 bold pl-5 text-white">Prospective Investors & Stakeholders</h2>
+                <h2 class="mb-5 bold pl-sm-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
             <div class="d-flex flex-1 flex-column p-5">
                 <h2 class="bold">OUR ADDRESS</h2>
