--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
             </div>
             <div class="content-center">
-                <div class="container landing-container d-flex flex-column justify-content-center ">
+                <div class="container landing-container d-flex flex-column pt-5">
                     <div class="landing-container__home pl-5">
-                            <h1 class="title no-margin landing__title mb-3">EFFECTIVE INVESTMENTS</h1>
+                            <h2 class="title no-margin landing__title mb-3">EFFECTIVE INVESTMENTS</h2>
                             <p>Prime investments in financially inclusive projects across a rapidly growing Southeast Asia region</p>
                     </div>
                 </div>
@@ -92,9 +92,9 @@
             </div>
             <div class="d-flex flex-1 flex-column p-5">
                 <h3 class="mb-2 bold">VISION</h3>
-                <p class="mb-5">The most trustable regional partner in delivering services to the unbanked and underbanked population.</p>
+                <p class="mb-5 text-justify">The most trustable regional partner in delivering services to the unbanked and underbanked population.</p>
                 <h3 class="mb-2 bold">MISSION</h3>
-                <p class="mb-5">To create value for our customers, employees, shareholders, and community.</p>
+                <p class="mb-5 text-justify">To create value for our customers, employees, shareholders, and community.</p>
             </div>
         </div>
     </section>
@@ -114,7 +114,7 @@
             <h2 class="bold mb-5 text-center">MANAGEMENT TEAM</h2>
             <div class="d-flex flex-row flex-wrap flex-sm-nowrap mb-5 p-sm-5">
                 <div class="d-flex flex-column team-side text-center ">
-                    <img src="./assets/images/contact/david.jpg" class="team-img">
+                    <img src="./assets/images/contact/marenov.jpeg" class="team-img">
                     <h5 class="mb-1 mt-3">Tel: +65 93874275</h5>
                     <p class="small">sultan.marenov@hayman-capital.com</p>
                 </div>
@@ -126,7 +126,7 @@
             </div>
             <div class="d-flex flex-row flex-wrap flex-sm-nowrap mb-5 p-sm-5">
                 <div class="d-flex flex-column team-side text-center ">
-                    <img src="./assets/images/contact/marenov.jpeg" class="team-img">
+                    <img src="./assets/images/contact/david.jpg" class="team-img">
                     <h5 class="mb-1 mt-3">Tel: +95 9254 137628</h5>
                     <p class="small">david.walker@hayman-capital.com</p>
                 </div>
@@ -145,22 +145,26 @@
             <div class="d-flex flex-1 flex-column text-center p-5">
                 <h2 class="mb-5 bold pl-sm-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
-            <div class="d-flex flex-1 flex-column p-5">
-                <h2 class="bold">OUR ADDRESS</h2>
+            <div class="d-flex flex-1 flex-column p-5 text-white">
+                <h2 class="bold text-darkgreen">OUR ADDRESS</h2>
                 <h5 class='bold mb-0'>600 North Bridge Road,</h5>
                 <h5 class='bold mb-0'>#10-01, Parkview Square,</h5>
                 <h5 class='bold '>Singapore 188778</h5>
                 <div class="container footer__form mt-4">
-                    <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
+                    <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/hello@hayman-capital.com" method="POST" />
                         <div class="card-body contact-wrapper justify-content-center p-0">
                             <div class="input-group no-border input-lg">
-                                <input type="email" class="form-control" placeholder="Your email...">
+                                <input type="text" name="first_name" class="form-control" placeholder="First name...">
+                                <input type="tetx" name="last_name" class="form-control" placeholder="Last name...">
                             </div>
                             <div class="input-group no-border input-lg">
-                                <textarea type="text" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
+                                <input type="email" name="email" class="form-control" placeholder="Your email...">
+                            </div>
+                            <div class="input-group no-border input-lg">
+                                <textarea type="text" name="message" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
                             </div>
                             <div class="d-flex flex-row justify-content-end">
-                                <button type="submit" class="btn btn-primary btn-round">Submit</a>
+                                <button type="submit" class="btn btn-primary btn-round">Submit</div>
                             </div>
                         </div>
                     </form>
