--- a/contact.html
+++ b/contact.html
@@ -77,16 +77,20 @@
                 <div class="d-flex flex-column">
                     <h4 class="text-darkblue mb-3">For prospective investors and stakeholders,</h4>
                     <div class="container footer__form py-2">
-                        <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
+                        <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/hello@hayman-capital.com" method="POST" />
                             <div class="card-body contact-wrapper justify-content-center p-0">
                                 <div class="input-group no-border input-lg">
-                                    <input type="email" class="form-control" placeholder="Your email...">
+                                    <input type="text" name="first_name" class="form-control" placeholder="First name...">
+                                    <input type="tetx" name="last_name" class="form-control" placeholder="Last name...">
                                 </div>
                                 <div class="input-group no-border input-lg">
-                                    <textarea type="text" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
+                                    <input type="email" name="email" class="form-control" placeholder="Your email...">
+                                </div>
+                                <div class="input-group no-border input-lg">
+                                    <textarea type="text" name="message" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
                                 </div>
                                 <div class="d-flex flex-row justify-content-end">
-                                    <button type="submit" class="btn btn-primary btn-round">Submit</a>
+                                    <button type="submit" class="btn btn-primary btn-round">Submit</div>
                                 </div>
                             </div>
                         </form>
