--- a/vietnam.html
+++ b/vietnam.html
@@ -69,12 +69,12 @@
 
     <section class="wrapper landing">
         <div class="page-header page-header-small">
-            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/background_indonesia.jpg');">
+            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/background_vietnam.jpg');">
             </div>
             <div class="content-center">
                 <div class="container landing-container landing-container--red d-flex flex-column pt-5">
                     <div class="text-center">
-                        <h1 class="title no-margin landing__title mb-3">HAYMAN CAPITAL VIETNAM</h1>
+                        <h2 class="title no-margin landing__title mb-3">HAYMAN CAPITAL VIETNAM</h2>
                         <p>Non-Banking Financial Institution (NBFI) in Vietnam</p>
                     </div>
                 </div>
@@ -104,22 +104,26 @@
             <div class="d-flex flex-1 flex-column text-center p-5">
                 <h2 class="mb-5 bold pl-sm-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
-            <div class="d-flex flex-1 flex-column p-5">
-                <h2 class="bold">OUR ADDRESS</h2>
+            <div class="d-flex flex-1 flex-column p-5 text-white">
+                <h2 class="bold text-darkgreen">OUR ADDRESS</h2>
                 <h5 class='bold mb-0'>600 North Bridge Road,</h5>
                 <h5 class='bold mb-0'>#10-01, Parkview Square,</h5>
                 <h5 class='bold '>Singapore 188778</h5>
                 <div class="container footer__form mt-4">
-                    <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/minmawtheinko.morgan@gmail.com" method="POST" />
+                    <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/hello@hayman-capital.com" method="POST" />
                         <div class="card-body contact-wrapper justify-content-center p-0">
                             <div class="input-group no-border input-lg">
-                                <input type="email" class="form-control" placeholder="Your email...">
+                                <input type="text" name="first_name" class="form-control" placeholder="First name...">
+                                <input type="tetx" name="last_name" class="form-control" placeholder="Last name...">
                             </div>
                             <div class="input-group no-border input-lg">
-                                <textarea type="text" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
+                                <input type="email" name="email" class="form-control" placeholder="Your email...">
+                            </div>
+                            <div class="input-group no-border input-lg">
+                                <textarea type="text" name="message" class="form-control contact-message" id="message" rows="3" placeholder="Your message..."></textarea>
                             </div>
                             <div class="d-flex flex-row justify-content-end">
-                                <button type="submit" class="btn btn-primary btn-round">Submit</a>
+                                <button type="submit" class="btn btn-primary btn-round">Submit</div>
                             </div>
                         </div>
                     </form>
