--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                         <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/hello@hayman-capital.com" method="POST" />
                             <div class="card-body contact-wrapper justify-content-center p-0">
                                 <div class="input-group no-border input-lg">
-                                    <input type="text" name="first_name" class="form-control" placeholder="First name...">
+                                    <input type="text" name="first_name" class="form-control mr-3" placeholder="First name...">
                                     <input type="tetx" name="last_name" class="form-control" placeholder="Last name...">
                                 </div>
                                 <div class="input-group no-border input-lg">
@@ -95,15 +95,15 @@
                             </div>
                         </form>
                     </div>
-                </div>
-                <div class="contact-side mb-5 pl-sm-5">
-                    <img src="./assets/images/logo/logo_horizontal.png" alt="Hayman Capital" class="contact-side__image mb-3" />
-                    <h4 class="bold my-1">Address:</h4>
-                    <p>600 North Bridge Road<br/>#10-01, Parkview Square<br/>Singapore 188778</p>
-                    <h4 class="bold mt-5 mb-1">Email:</h4>
-                    <p>hello@hayman-capital.com</p>
-                    <h4 class="bold mt-5 mb-1">Contact:</h4>
-                    <p>+65 93874275</p>
+                    <div class="contact-side mb-5 pl-sm-5">
+                        <img src="./assets/images/logo/logo_horizontal.png" alt="Hayman Capital" class="contact-side__image mb-3" />
+                        <h4 class="bold my-1">Address:</h4>
+                        <p>600 North Bridge Road<br/>#10-01, Parkview Square<br/>Singapore 188778</p>
+                        <h4 class="bold mt-5 mb-1">Email:</h4>
+                        <p>hello@hayman-capital.com</p>
+                        <h4 class="bold mt-5 mb-1">Contact:</h4>
+                        <p>+65 93874275</p>
+                    </div>
                 </div>
             </div>
         </div>
