--- a/myanmar.html
+++ b/myanmar.html
@@ -67,17 +67,12 @@
     </nav>
     <!-- End Navbar -->
 
-    <section class="wrapper landing">
-        <div class="page-header page-header-small">
-            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/bagan.jpg');">
-
-            </div>
-            <div class="content-center">
-                <div class="container landing-container landing-container--red d-flex flex-column pt-5">
-                    <div class="text-center">
-                            <h2 class="title no-margin landing__title mb-3">HAYMAN CAPITAL CO. LTD</h2>
-                            <p>Dynamically growing Microfinance Institution (MFI) in Myanmar</p>
-                    </div>
+    <section class="wrapper landing page-header--myanmar">
+        <div class="landing-content content-center text-white">
+            <div class="container landing-container landing-container--red d-flex flex-column pt-5">
+                <div class="text-center">
+                        <h1 class="title no-margin landing__title mb-3">HAYMAN CAPITAL CO. LTD</h1>
+                        <p>Dynamically growing Microfinance Institution (MFI) in Myanmar</p>
                 </div>
             </div>
         </div>
@@ -86,19 +81,19 @@
     <section class="section relative">
         <div class="bg-half bg-gray"></div>
         <div class="container text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
-            <div class="d-flex flex-1 flex-column text-center p-5">
-                <img src="./assets/images/logo/logo_microfinance.png" alt="Hayman Microfinance" class="logo--content mb-5">
+            <div class="d-flex flex-1 flex-column text-center align-items-center py-5 px-sm-5 mw-250">
+                <img src="./assets/images/logo/logo_microfinance.png" alt="Hayman Microfinance" class="logo--content mb-3">
                 <p class="text-center">A fully licensed deposit-taking MFI
                     owned 100% by Hayman Capital Pte Ltd</p>
                 <p class="text-center">Since its operations in July 2015 (est. 2014),
 
                     our MFI holds a solid financial position bolstered by prudent governance, strong contacts, and esteemed stakeholders</p>
             </div>
-            <div class="d-flex flex-1 flex-column p-5">
+            <div class="d-flex flex-1 flex-column py-5 px-sm-5 mw-250">
                 <h3 class="mb-2 bold">VISION</h3>
-                <p class="mb-5">To become a leading financial institution in Myanmar serving millions of customers through a wide network of branches providing high-quality products and services using the international standards of management and financially inclusive principles.</p>
+                <p class="mb-5 text-justify">To become a leading financial institution in Myanmar serving millions of customers through a wide network of branches providing high-quality products and services using the international standards of management and financially inclusive principles.</p>
                 <h3 class="mb-2 bold">MISSION</h3>
-                <p class="mb-5">To play a key role in improving living standards and wellbeing of our customers by building long-term partnership and providing mutually beneficial and affordable financial services.</p>
+                <p class="mb-5 text-justify">To play a key role in improving living standards and wellbeing of our customers by building long-term partnership and providing mutually beneficial and affordable financial services.</p>
             </div>
         </div>
     </section>
@@ -202,12 +197,12 @@
             <div class="carousel-item py-5 active my-5">
                 <div class="container">
                     <h2 class="text-red text-center bold">Client Segmentation By Sector</h2>
-                    <div class="d-flex flex-row justify-content-between flex-wrap">
-                        <div class="chart">
+                    <div class="d-flex flex-row justify-content-center flex-wrap">
+                        <div class="d-flex chart">
                             <canvas id="clientSegmentation" width="400" height="400"></canvas>
                         </div>
-                        <div class="d-flex align-items-center">
-                            <p class="stats__text">Majority of the clients are micro-entrepreneurs and small farmers. Hayman Microfinance specializes in fulfilling the requirements of an institutional mandate through in-depth sector knowledge and skilled advisory services to provide customized solutions in the growth of small business in rural and urban areas.</p>
+                        <div class="d-flex align-items-center pl-sm-5">
+                            <p class="stats__text text-justify">Majority of the clients are micro-entrepreneurs and small farmers. Hayman Microfinance specializes in fulfilling the requirements of an institutional mandate through in-depth sector knowledge and skilled advisory services to provide customized solutions in the growth of small business in rural and urban areas.</p>
                         </div>
                     </div>
                 </div>
@@ -225,7 +220,7 @@
         <img src="./assets//images/background/myanmar3.png" class="full-backdrop" />
         <div class="bg-yellow-trans bg-half z-0"></div>
         <div class="container relative z-1 text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
-            <div class="d-flex flex-1 flex-column text-center py-5">
+            <div class="d-flex flex-1 flex-column text-center py-5 mw-250">
                 <h2 class="text-red mb-5 bold">Why <b>Hayman MFI</b></h2>
                 <ul class="text-darkblue h-list">
                     <li class="bold">Shareholders commitment to grow the business.</li>
@@ -238,7 +233,7 @@
                 </ul>
                 <a href="https://www.hayman-capital.com.mm" target="_blank" class="btn btn-primary btn-round">Explore more on Hayman MFI</a>
             </div>
-            <div class="d-flex flex-1 flex-column p-5">
+            <div class="d-flex flex-1 flex-column py-5 px-sm-5 mw-250">
 
             </div>
         </div>
@@ -249,14 +244,14 @@
             <h2 class="text-center">our <span class="text-red bold">PARTNERS</span></h2>
             <div class="bar bg-black mt-5 mb-4"></div>
             <div class="d-flex flex-wrap justify-content-between flex-md-nowrap mt-3">
-                <img src="./assets/images/partners/hayman_horizontal.png" alt="Hayman Capital" class="img-partner m-3" />
-                <img src="./assets/images/partners/maybank.jpg" alt="Maybank" class="img-partner m-3" />
-                <img src="./assets/images/partners/kbz.png" alt="KBZ Bank" class="img-partner m-3" />
+                <img src="./assets/images/partners/hayman_horizontal.png" alt="Hayman Capital" class="img-partner mx-5 my-3" />
+                <img src="./assets/images/partners/maybank.jpg" alt="Maybank" class="img-partner mx-5 my-3" />
+                <img src="./assets/images/partners/kbz.png" alt="KBZ Bank" class="img-partner mx-5 my-3" />
             </div>
             <div class="d-flex flex-wrap flex-md-nowrap">
-                <img src="./assets/images/partners/yoma.jpeg" alt="Yoma Bank" class="img-partner m-3" />
-                <img src="./assets/images/partners/symbiotics.png" alt="Symbiotics" class="img-partner m-3" />
-                <img src="./assets/images/partners/musoni.png" alt="Musoni" class="img-partner m-3" />
+                <img src="./assets/images/partners/yoma.jpeg" alt="Yoma Bank" class="img-partner mx-5 my-3" />
+                <img src="./assets/images/partners/symbiotics.png" alt="Symbiotics" class="img-partner mx-5 my-3" />
+                <img src="./assets/images/partners/musoni.png" alt="Musoni" class="img-partner mx-5 my-3" />
             </div>
         </div>
     </section>
