--- a/index.html
+++ b/index.html
@@ -67,17 +67,12 @@
     </nav>
     <!-- End Navbar -->
 
-    <section class="wrapper landing">
-        <div class="page-header page-header-small">
-            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/singapore3.jpg');">
-
-            </div>
-            <div class="content-center">
-                <div class="container landing-container d-flex flex-column pt-5">
-                    <div class="landing-container__home pl-5">
-                            <h2 class="title no-margin landing__title mb-3">EFFECTIVE INVESTMENTS</h2>
-                            <p>Prime investments in financially inclusive projects across a rapidly growing Southeast Asia region</p>
-                    </div>
+    <section class="wrapper landing page-header--main">
+        <div class="landing-content content-center">
+            <div class="container text-white landing-container d-flex flex-column pt-5">
+                <div class="landing-container__home pl-3 pl-sm-5">
+                    <h2 class="title no-margin landing__title mb-3">EFFECTIVE INVESTMENTS</h2>
+                    <p>Prime investments in financially inclusive projects across a rapidly growing Southeast Asia region</p>
                 </div>
             </div>
         </div>
@@ -86,11 +81,11 @@
     <section class="section relative">
         <div class="bg-half bg-cyan"></div>
         <div class="container text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
-            <div class="d-flex flex-1 flex-column text-center p-5">
+            <div class="d-flex flex-1 flex-column text-center mw-300 py-5 px-sm-5">
                 <h2 class="mb-5 bold">WHO WE ARE</h2>
-                <h5><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities. Hayman looks to make a positive impact to society wherever it invests. </h5>
+                <h5 class="text-justify"><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities. Hayman looks to make a positive impact to society wherever it invests. </h5>
             </div>
-            <div class="d-flex flex-1 flex-column p-5">
+            <div class="d-flex flex-1 flex-column mw-300 py-5 px-sm-5">
                 <h3 class="mb-2 bold">VISION</h3>
                 <p class="mb-5 text-justify">The most trustable regional partner in delivering services to the unbanked and underbanked population.</p>
                 <h3 class="mb-2 bold">MISSION</h3>
@@ -110,9 +105,9 @@
     </section>
 
     <section class="section bg-lightcyan pt-5 pb-5">
-        <div class="container p-5 d-flex flex-column text-darkblue">
+        <div class="container py-5 px-sm-5 d-flex flex-column text-darkblue">
             <h2 class="bold mb-5 text-center">MANAGEMENT TEAM</h2>
-            <div class="d-flex flex-row flex-wrap flex-sm-nowrap mb-5 p-sm-5">
+            <div class="d-flex flex-row flex-wrap flex-sm-nowrap justify-content-center mb-5 px-sm-5">
                 <div class="d-flex flex-column team-side text-center ">
                     <img src="./assets/images/contact/marenov.jpeg" class="team-img">
                     <h5 class="mb-1 mt-3">Tel: +65 93874275</h5>
@@ -121,10 +116,10 @@
                 <div class="d-flex flex-column pl-sm-5">
                     <h5 class="bold mb-1">SULTAN MARENOV</h5>
                     <p class="text-blue text-underline pb-2 max-content mb-5"> CEO & Managing Director</p>
-                    <p>20 years of senior experience in Commercial Banking, focusing on Trade Finance, SME and Microfinance lending, Retail Banking and general operational management. Sultan began his career in 1999 at the BTA Bank - the biggest private financial institution in Central Asia and CIS countries. In 2005, he was appointed as a CEO at the BTA Bank Belarus. During his 10 years of management, the bank became the fastest growing in the region and awarded as the "Best Bank for entrepreneurs" several times. He has successfully implemented the EBRD Microfinance Program in the Bank. He holds Bachelor degree in Banking and Finance and Bachelor degree in Jurisprudence.</p>
+                    <p class="text-justify">20 years of senior experience in Commercial Banking, focusing on Trade Finance, SME and Microfinance lending, Retail Banking and general operational management. Sultan began his career in 1999 at the BTA Bank - the biggest private financial institution in Central Asia and CIS countries. In 2005, he was appointed as a CEO at the BTA Bank Belarus. During his 10 years of management, the bank became the fastest growing in the region and awarded as the "Best Bank for entrepreneurs" several times. He has successfully implemented the EBRD Microfinance Program in the Bank. He holds Bachelor degree in Banking and Finance and Bachelor degree in Jurisprudence.</p>
                 </div>
             </div>
-            <div class="d-flex flex-row flex-wrap flex-sm-nowrap mb-5 p-sm-5">
+            <div class="d-flex flex-row flex-wrap flex-sm-nowrap justify-content-center mb-5 px-sm-5">
                 <div class="d-flex flex-column team-side text-center ">
                     <img src="./assets/images/contact/david.jpg" class="team-img">
                     <h5 class="mb-1 mt-3">Tel: +95 9254 137628</h5>
@@ -133,7 +128,7 @@
                 <div class="d-flex flex-column pl-sm-5">
                     <h5 class="bold mb-1">DAVID WALKER</h5>
                     <p class="text-blue text-underline pb-2 max-content mb-5"> Director </p>
-                    <p>25 years of senior experience in Investment Banking and project development, focusing on Natural Resources, Real Estate and the Financial sector within fast-growing developing markets. David has been based in Russia for 6 years and Africa for 5 years. Previously David was a Managing Director at Citi Group, Deutsche Bank and Troika Dialogue in Moscow. David also has extensive experience in the Far East gained when he was a Director of Nomura International. MA in Jurisprudence from Oxford University.</p>
+                    <p class="text-justify">25 years of senior experience in Investment Banking and project development, focusing on Natural Resources, Real Estate and the Financial sector within fast-growing developing markets. David has been based in Russia for 6 years and Africa for 5 years. Previously David was a Managing Director at Citi Group, Deutsche Bank and Troika Dialogue in Moscow. David also has extensive experience in the Far East gained when he was a Director of Nomura International. MA in Jurisprudence from Oxford University.</p>
                 </div>
             </div>
         </div>
@@ -142,10 +137,10 @@
     <section class="section relative contact-section">
         <div class="bg-half bg-cyan-trans z-0"></div>
         <div class="container d-flex flex-row flex-wrap flex-sm-nowrap relative z-1">
-            <div class="d-flex flex-1 flex-column text-center p-5">
+            <div class="d-flex flex-1 flex-column text-center py-5 px-sm-5">
                 <h2 class="mb-5 bold pl-sm-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
-            <div class="d-flex flex-1 flex-column p-5 text-white">
+            <div class="d-flex flex-1 flex-column py-5 px-sm-5 text-white">
                 <h2 class="bold text-darkgreen">OUR ADDRESS</h2>
                 <h5 class='bold mb-0'>600 North Bridge Road,</h5>
                 <h5 class='bold mb-0'>#10-01, Parkview Square,</h5>
@@ -154,7 +149,7 @@
                     <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/hello@hayman-capital.com" method="POST" />
                         <div class="card-body contact-wrapper justify-content-center p-0">
                             <div class="input-group no-border input-lg">
-                                <input type="text" name="first_name" class="form-control" placeholder="First name...">
+                                <input type="text" name="first_name" class="form-control mr-3" placeholder="First name...">
                                 <input type="tetx" name="last_name" class="form-control" placeholder="Last name...">
                             </div>
                             <div class="input-group no-border input-lg">
