--- a/indonesia.html
+++ b/indonesia.html
@@ -67,14 +67,11 @@
     </nav>
     <!-- End Navbar -->
 
-    <section class="wrapper landing">
-        <div class="page-header page-header-small">
-            <div class="page-header-image relative" data-parallax="true" style="background-image: url('./assets/images/background/background_indonesia.jpg');">
-            </div>
-            <div class="content-center">
+    <section class="wrapper landing page-header--indonesia">
+            <div class="landing-content content-center text-white">
                 <div class="container landing-container landing-container--green d-flex flex-column pt-5">
                     <div class="text-center">
-                        <h2 class="title no-margin landing__title mb-3">HAYMAN FINANCE INDONESIA</h2>
+                        <h1 class="title no-margin landing__title mb-3">HAYMAN FINANCE INDONESIA</h1>
                         <p>Multifinance Institution in Indonesia</p>
                     </div>
                 </div>
@@ -85,15 +82,15 @@
     <section class="section relative">
         <div class="bg-half bg-lightyellow"></div>
         <div class="container text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
-            <div class="d-flex flex-1 flex-column text-center p-5">
-                <img src="./assets/images/logo/logo_indonesia.png" alt="Hayman Finance Indonesia" class="logo--content mb-5">
+            <div class="d-flex flex-1 flex-column align-items-center text-center py-5 px-sm-5 mw-250">
+                <img src="./assets/images/logo/logo_indonesia.png" alt="Hayman Finance Indonesia" class="logo--content mb-3">
                 <p class="text-center">Hayman Finance Indonesia (“HFI”) is in the process of obtaining a Non-Banking Financial Institution (NBFI) license in Indonesia.</p>
             </div>
-            <div class="d-flex flex-1 flex-column p-5">
+            <div class="d-flex flex-1 flex-column py-5 px-sm-5 mw-250">
                 <h3 class="mb-2 bold">VISION</h3>
-                <p class="mb-5">To become a leading SME lender for unbanked and entrepreneurs across Indonesia with flexible requirements and affordable prices, and to digitalize our services for the outreach of the underserved rural regions.</p>
+                <p class="mb-5 text-justify">To become a leading SME lender for unbanked and entrepreneurs across Indonesia with flexible requirements and affordable prices, and to digitalize our services for the outreach of the underserved rural regions.</p>
                 <h3 class="mb-2 bold">MISSION</h3>
-                <p class="mb-5">To play a key role in delivering responsible finance to empower women entrepreneurship.</p>
+                <p class="mb-5 text-justify">To play a key role in delivering responsible finance to empower women entrepreneurship.</p>
             </div>
         </div>
     </section>
@@ -101,10 +98,10 @@
     <section class="section relative contact-section">
         <div class="bg-half bg-cyan-trans z-0"></div>
         <div class="container d-flex flex-row flex-wrap flex-sm-nowrap relative z-1">
-            <div class="d-flex flex-1 flex-column text-center p-5">
+            <div class="d-flex flex-1 flex-column text-center py-5 px-sm-5">
                 <h2 class="mb-5 bold pl-sm-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
-            <div class="d-flex flex-1 flex-column p-5 text-white">
+            <div class="d-flex flex-1 flex-column py-5 px-sm-5 text-white">
                 <h2 class="bold text-darkgreen">OUR ADDRESS</h2>
                 <h5 class='bold mb-0'>600 North Bridge Road,</h5>
                 <h5 class='bold mb-0'>#10-01, Parkview Square,</h5>
@@ -113,7 +110,7 @@
                     <form class="form d-flex flex-row justify-content-center" action="https://formspree.io/hello@hayman-capital.com" method="POST" />
                         <div class="card-body contact-wrapper justify-content-center p-0">
                             <div class="input-group no-border input-lg">
-                                <input type="text" name="first_name" class="form-control" placeholder="First name...">
+                                <input type="text" name="first_name" class="form-control mr-3" placeholder="First name...">
                                 <input type="tetx" name="last_name" class="form-control" placeholder="Last name...">
                             </div>
                             <div class="input-group no-border input-lg">
