--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="container text-white landing-container d-flex flex-column pt-5">
                 <div class="landing-container__home pl-3 pl-sm-5">
                     <h2 class="title no-margin landing__title mb-3">EFFECTIVE INVESTMENTS</h2>
-                    <p>Prime investments in financially inclusive projects across a rapidly growing Southeast Asia region</p>
+                    <p>Prime investments in financially inclusive projects across the rapidly growing Southeast Asia region</p>
                 </div>
             </div>
         </div>
@@ -83,11 +83,11 @@
         <div class="container text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
             <div class="d-flex flex-1 flex-column text-center mw-300 py-5 px-sm-5">
                 <h2 class="mb-5 bold">WHO WE ARE</h2>
-                <h5 class="text-justify"><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities. Hayman looks to make a positive impact to society wherever it invests. </h5>
+                <h5 class="text-justify"><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities, Hayman looks to make a positive impact to society wherever it invests.</h5>
             </div>
             <div class="d-flex flex-1 flex-column mw-300 py-5 px-sm-5">
                 <h3 class="mb-2 bold">VISION</h3>
-                <p class="mb-5 text-justify">The most trustable regional partner in delivering services to the unbanked and underbanked population.</p>
+                <p class="mb-5 text-justify">To be the most trusted” regional partner in delivering services to the unbanked and underbanked population</p>
                 <h3 class="mb-2 bold">MISSION</h3>
                 <p class="mb-5 text-justify">To create value for our customers, employees, shareholders, and community.</p>
             </div>
@@ -99,7 +99,7 @@
             <h2 class="mb-5">CORE <b>VALUES</b></h2>
             <h5 class="mb-3 bold">WE BELIEVE IN VALUE CREATION FROM:</h5>
             <p>The highest level of ethical standards, professional integrity, corporate governance, and regulatory compliance</p>
-            <p>Financial inclusion and innovation, women empowerment and commitments towards social responsibility</p>
+            <p>Financial inclusion and innovation, women empowerment and commitment towards social responsibility</p>
             <p>Synergistic partnerships with our subsidiaries and stakeholders</p>
         </div>
     </section>
