--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="d-flex flex-1 flex-column mw-300 py-5 px-sm-5">
                 <h3 class="mb-2 bold">VISION</h3>
-                <p class="mb-5 text-justify">To be the most trusted” regional partner in delivering services to the unbanked and underbanked population</p>
+                <p class="mb-5 text-justify">To be the most trusted regional partner in delivering services to the unbanked and underbanked population</p>
                 <h3 class="mb-2 bold">MISSION</h3>
                 <p class="mb-5 text-justify">To create value for our customers, employees, shareholders, and community.</p>
             </div>
