--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container text-darkblue d-flex flex-row flex-wrap flex-sm-nowrap">
             <div class="d-flex flex-1 flex-column text-center mw-300 py-5 px-sm-5">
                 <h2 class="mb-5 bold">WHO WE ARE</h2>
-                <h5 class="text-justify"><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities, Hayman looks to make a positive impact to society wherever it invests.</h5>
+                <h5 class="text-justify"><b>Hayman Capital Pte. Ltd</b> aims to invest in financially inclusive projects across South East Asia and build a portfolio of sustainable investments. We have specific country focus on and extensive country expertise in Myanmar, Vietnam and Indonesia. Driven by established goals to build shareholder value, mindful of its social, economic and environmental responsibilities, Hayman looks to make a positive impact to society wherever it invests.</h5>
             </div>
             <div class="d-flex flex-1 flex-column mw-300 py-5 px-sm-5">
                 <h3 class="mb-2 bold">VISION</h3>
