remove ph no-s, smaller photos, figure changes

--- a/indonesia.html
+++ b/indonesia.html
@@ -102,7 +102,7 @@
                 <h2 class="mb-5 bold pl-sm-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
             <div class="d-flex flex-1 flex-column py-5 px-sm-5 text-white">
-                <h2 class="bold text-darkgreen">OUR ADDRESS</h2>
+                <h2 class="bold text-white">OUR ADDRESS</h2>
                 <h5 class='bold mb-0'>600 North Bridge Road,</h5>
                 <h5 class='bold mb-0'>#10-01, Parkview Square,</h5>
                 <h5 class='bold '>Singapore 188778</h5>
