--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             <div class="d-flex flex-row flex-wrap flex-sm-nowrap justify-content-center mb-5 px-sm-5">
                 <div class="d-flex flex-column team-side text-center ">
                     <img src="./assets/images/contact/marenov.jpeg" class="team-img">
-                    <h5 class="mb-1 mt-3">Tel: +65 93874275</h5>
-                    <p class="small">sultan.marenov@hayman-capital.com</p>
+                    <p class="mt-2 small">sultan.marenov@hayman-capital.com</p>
                 </div>
                 <div class="d-flex flex-column pl-sm-5">
                     <h5 class="bold mb-1">SULTAN MARENOV</h5>
@@ -122,8 +121,7 @@
             <div class="d-flex flex-row flex-wrap flex-sm-nowrap justify-content-center mb-5 px-sm-5">
                 <div class="d-flex flex-column team-side text-center ">
                     <img src="./assets/images/contact/david.jpg" class="team-img">
-                    <h5 class="mb-1 mt-3">Tel: +95 9254 137628</h5>
-                    <p class="small">david.walker@hayman-capital.com</p>
+                    <p class="mt-2 small">david.walker@hayman-capital.com</p>
                 </div>
                 <div class="d-flex flex-column pl-sm-5">
                     <h5 class="bold mb-1">DAVID WALKER</h5>
@@ -141,7 +139,7 @@
                 <h2 class="mb-5 bold pl-sm-5 text-white">Prospective Investors & Stakeholders</h2>
             </div>
             <div class="d-flex flex-1 flex-column py-5 px-sm-5 text-white">
-                <h2 class="bold text-darkgreen">OUR ADDRESS</h2>
+                <h2 class="bold text-white">OUR ADDRESS</h2>
                 <h5 class='bold mb-0'>600 North Bridge Road,</h5>
                 <h5 class='bold mb-0'>#10-01, Parkview Square,</h5>
                 <h5 class='bold '>Singapore 188778</h5>
